# badgery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: endpoint-format.md  manifest.md
examples/: README.md  badgery.json  release.json
scripts/: smoke.sh
src/: badge.rs  cli.rs  color.rs  endpoint.rs  json.rs  jsonpath.rs  lib.rs  main.rs  manifest.rs  render.rs  server.rs  text.rs
tests/: cli.rs
